fix extra space/scrolling to the right, rm all space between product cards & detail text (#29)

--- a/assets/scss/components/citadel/cards/_cards.scss
+++ b/assets/scss/components/citadel/cards/_cards.scss
@@ -139,3 +139,7 @@
         }
     }
 }
+
+.card {
+    margin: 0;
+}
